--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
     "ng-jhipster": "0.2.12",
+    "ng2-bootstrap": "^1.6.3",
     "ng2-webstorage": "1.8.0",
     "ngx-cookie": "1.0.0",
     "ngx-infinite-scroll": "0.5.1",
