--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -36,7 +36,7 @@ spring:
         type: com.zaxxer.hikari.HikariDataSource
         url: jdbc:mysql://localhost:3306/ProyectoIntegrador?useUnicode=true&characterEncoding=utf8&useSSL=false
         username: root
-        password: root
+        password:
         hikari:
             data-source-properties:
                 cachePrepStmts: true
